// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThumbnailStrip > snapshots > renders detection without object type or confidence 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence (
    1
    )
  </h3>
  <div
    class="flex gap-3 overflow-x-auto pb-2"
    style="scrollbar-width: thin;"
  >
    <button
      aria-label="View detection 1 at 10:30:00. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 1: object"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb1.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          1
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:00
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:00
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ThumbnailStrip > snapshots > renders loading state skeleton 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence
  </h3>
  <div
    class="flex gap-2 overflow-x-auto pb-2"
  >
    <div
      class="flex flex-col items-center gap-1"
      style="min-width: 120px;"
    >
      <div
        class="h-20 w-full animate-pulse rounded-lg bg-gray-800"
      />
      <div
        class="h-4 w-16 animate-pulse rounded bg-gray-800"
      />
    </div>
    <div
      class="flex flex-col items-center gap-1"
      style="min-width: 120px;"
    >
      <div
        class="h-20 w-full animate-pulse rounded-lg bg-gray-800"
      />
      <div
        class="h-4 w-16 animate-pulse rounded bg-gray-800"
      />
    </div>
    <div
      class="flex flex-col items-center gap-1"
      style="min-width: 120px;"
    >
      <div
        class="h-20 w-full animate-pulse rounded-lg bg-gray-800"
      />
      <div
        class="h-4 w-16 animate-pulse rounded bg-gray-800"
      />
    </div>
  </div>
</div>
`;

exports[`ThumbnailStrip > snapshots > renders single detection 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence (
    1
    )
  </h3>
  <div
    class="flex gap-3 overflow-x-auto pb-2"
    style="scrollbar-width: thin;"
  >
    <button
      aria-label="View detection 1 at 10:30:00. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 1: person"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb1.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          1
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:00
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:00
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        person
         (95%)
      </div>
    </button>
  </div>
</div>
`;

exports[`ThumbnailStrip > snapshots > renders with high confidence detection 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence (
    1
    )
  </h3>
  <div
    class="flex gap-3 overflow-x-auto pb-2"
    style="scrollbar-width: thin;"
  >
    <button
      aria-label="View detection 1 at 10:30:00. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 1: person"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb1.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          1
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:00
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:00
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        person
         (99%)
      </div>
    </button>
  </div>
</div>
`;

exports[`ThumbnailStrip > snapshots > renders with low confidence detection 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence (
    1
    )
  </h3>
  <div
    class="flex gap-3 overflow-x-auto pb-2"
    style="scrollbar-width: thin;"
  >
    <button
      aria-label="View detection 1 at 10:30:00. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 1: person"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb1.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          1
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:00
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:00
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        person
         (15%)
      </div>
    </button>
  </div>
</div>
`;

exports[`ThumbnailStrip > snapshots > renders with pagination (show more button) 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence (
    30
    )
  </h3>
  <div
    class="flex gap-3 overflow-x-auto pb-2"
    style="scrollbar-width: thin;"
  >
    <button
      aria-label="View detection 1 at 10:30:00. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 1: object-1"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb1.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          1
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:00
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:00
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-1
         (50%)
      </div>
    </button>
    <button
      aria-label="View detection 2 at 10:30:01. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 2: object-2"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb2.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          2
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:01
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:01
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-2
         (51%)
      </div>
    </button>
    <button
      aria-label="View detection 3 at 10:30:02. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 3: object-3"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb3.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          3
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:02
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:02
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-3
         (52%)
      </div>
    </button>
    <button
      aria-label="View detection 4 at 10:30:03. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 4: object-4"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb4.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          4
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:03
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:03
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-4
         (53%)
      </div>
    </button>
    <button
      aria-label="View detection 5 at 10:30:04. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 5: object-5"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb5.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          5
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:04
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:04
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-5
         (54%)
      </div>
    </button>
    <button
      aria-label="View detection 6 at 10:30:05. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 6: object-6"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb6.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          6
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:05
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:05
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-6
         (55%)
      </div>
    </button>
    <button
      aria-label="View detection 7 at 10:30:06. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 7: object-7"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb7.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          7
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:06
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:06
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-7
         (56%)
      </div>
    </button>
    <button
      aria-label="View detection 8 at 10:30:07. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 8: object-8"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb8.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          8
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:07
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:07
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-8
         (57%)
      </div>
    </button>
    <button
      aria-label="View detection 9 at 10:30:08. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 9: object-9"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb9.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          9
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:08
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:08
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-9
         (58%)
      </div>
    </button>
    <button
      aria-label="View detection 10 at 10:30:09. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 10: object-10"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb10.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          10
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:09
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:09
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        object-10
         (59%)
      </div>
    </button>
    <button
      aria-label="Show 20 more detections"
      class="flex flex-shrink-0 cursor-pointer flex-col items-center justify-center gap-2 rounded-lg border border-dashed border-gray-600 p-2 text-gray-400 transition-all hover:border-[#76B900]/50 hover:bg-gray-800/30 hover:text-gray-200"
      data-testid="show-more-thumbnails"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="flex h-20 w-full items-center justify-center"
      >
        <div
          class="flex flex-col items-center gap-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-6 w-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
          <span
            class="text-sm font-medium"
          >
            +
            20
          </span>
        </div>
      </div>
      <span
        class="text-xs"
      >
        Show more
      </span>
    </button>
  </div>
</div>
`;

exports[`ThumbnailStrip > snapshots > renders with selected detection 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence (
    3
    )
  </h3>
  <div
    class="flex gap-3 overflow-x-auto pb-2"
    style="scrollbar-width: thin;"
  >
    <button
      aria-label="View detection 1 at 10:30:00. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 1: person"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb1.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          1
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:00
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:00
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        person
         (95%)
      </div>
    </button>
    <button
      aria-label="View detection 2 at 10:30:02. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all bg-[#76B900]/20 ring-2 ring-[#76B900]"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-[#76B900] transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 2: car"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb2.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          2
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:02
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:02
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        car
         (87%)
      </div>
    </button>
    <button
      aria-label="View detection 3 at 10:30:05. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 3: package"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb3.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          3
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:05
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:05
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        package
         (92%)
      </div>
    </button>
  </div>
</div>
`;

exports[`ThumbnailStrip > snapshots > renders with three detections 1`] = `
<div
  class="rounded-lg border border-gray-800 bg-black/20 p-4"
>
  <h3
    class="mb-3 text-sm font-semibold uppercase tracking-wide text-gray-400"
  >
    Detection Sequence (
    3
    )
  </h3>
  <div
    class="flex gap-3 overflow-x-auto pb-2"
    style="scrollbar-width: thin;"
  >
    <button
      aria-label="View detection 1 at 10:30:00. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 1: person"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb1.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          1
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:00
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:00
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        person
         (95%)
      </div>
    </button>
    <button
      aria-label="View detection 2 at 10:30:02. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 2: car"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb2.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          2
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:02
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:02
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        car
         (87%)
      </div>
    </button>
    <button
      aria-label="View detection 3 at 10:30:05. Double-click to enlarge."
      class="group relative flex flex-shrink-0 cursor-pointer flex-col items-center gap-2 rounded-lg p-2 transition-all hover:scale-[1.02] hover:bg-gray-800/50 focus:bg-gray-800/50"
      style="min-width: 120px;"
      type="button"
    >
      <div
        class="relative overflow-hidden rounded-md border border-gray-700 transition-all group-hover:border-[#76B900]/50"
      >
        <img
          alt="Detection 3: package"
          class="h-20 w-full object-cover"
          loading="lazy"
          src="https://example.com/thumb3.jpg"
        />
        <div
          class="absolute right-1 top-1 rounded-full bg-black/75 px-2 py-0.5 text-xs font-semibold text-white"
        >
          #
          3
        </div>
      </div>
      <div
        class="flex flex-col items-center gap-0.5 text-xs"
      >
        <div
          class="flex items-center gap-1 text-gray-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6v6l4 2"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
          <span
            class="font-mono"
          >
            00:05
          </span>
        </div>
        <span
          class="font-mono text-gray-500"
        >
          10:30:05
        </span>
      </div>
      <div
        class="text-xs text-gray-400"
      >
        package
         (92%)
      </div>
    </button>
  </div>
</div>
`;
